package pj.domain

final case class PhysicalResource(resourceId: PhysicalResourceId, resourceType: ResourceType)

final case class PhysicalResourceRef(resourceType: ResourceType)
